--- a/static/css/query-builder.css
+++ b/static/css/query-builder.css
@@ -647,7 +647,7 @@ div.show-record-popup {
     width: calc(100% - 240px);
 }
 #tabs-chart,
-#logs-result-container{
+#showTable{
     display: none;
     margin: 54px 0 0 0;
 }
@@ -663,4 +663,21 @@ div.show-record-popup {
     border-radius: 10px;
     padding: 10px;
     background: var(--black1-to-white0)
+}
+.show-table{
+    height: calc(100% - 58px);
+}
+.hide-graph{
+    display: none;
+    height: calc(100% - 58px);
+}
+.hide-graph-text{
+    display: flex;
+    height: calc(100% - 58px);
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    font-weight: var(--fw-500);
+    color: var(--empty-response-text-color);
 }
