--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -1370,7 +1370,7 @@ progress.hidden {
 .query-stats-header{
     padding-left: 15px;
     margin-bottom: 12px;
-    font-size: 20px;
+    font-size: 18px;
     color: var(--cstats-header-text-color);
     font-weight: var(--fw-500) !important;
     font-family: "DINpro", Arial, sans-serif;
@@ -1430,9 +1430,9 @@ progress.hidden {
 }
 
 .index-stats-header {
-    padding-left: 15px;
+    padding-left: 8px;
     margin-bottom: 12px;
-    font-size: 20px;
+    font-size: 18px;
     color: var(--cstats-header-text-color);
     font-weight: var(--fw-500) !important;
     font-family: "DINpro", Arial, sans-serif;
@@ -1498,7 +1498,7 @@ progress.hidden {
 
 .dataTables_info {
     color: var(--text-color) !important;
-    font-size: 15px;
+    font-size: 13px;
     margin-top: -4px;
 }
 
@@ -1577,7 +1577,7 @@ progress.hidden {
 .chart-container #date-picker-btn {
     width: 140px !important;
     margin-left: 20px !important;
-    height: 40px !important;
+    height: 32px !important;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -3402,7 +3402,7 @@ float: right;
 }
 
 .myOrg-inner-container {
-    font-size: 18px;
+    font-size: 14px;
     padding: 20px;
     padding-top: 0px;
 }
@@ -4052,15 +4052,12 @@ color: #C8C7CC;
     align-items: center;
 }
 
-#app-content-area .caption{
-   margin-bottom: 30px;
-}
 
 .org-nav-tab{
     display: flex;
     justify-content: space-between;
     margin: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .api-keys-submit-btn{
     font-size: 1rem !important;
@@ -4076,7 +4073,6 @@ color: #C8C7CC;
 }
 
 .myOrg #test-data-container .main-dropdown{
-    margin-top: 10px;
     position: absolute;
 }
 
@@ -4086,15 +4082,17 @@ color: #C8C7CC;
 }
 
 #test-data-btn{
-    margin-top: 10px;
     position: absolute;
     margin-left: 687px;
 }
 
 .myOrg #test-data-container .role-inner-dropdown{
-    height: 40px;
+    height: 30px;
 }
 
+#versionInfo{
+    font-size: 18px;
+}
 /*Alerting Page*/
 #alerting{
     padding: 20px;
