--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1296,9 +1296,11 @@ input:checked + .slider:before {
   }
 .refresh-btn:hover{
   background: var(--top-refresh-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
+  background-size: 46% !important;
   }
 #save-db-btn:hover{
   background: var(--top-save-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
+  background-size: 45% !important;
 }
 .panel-header:hover{
   background-color: var(--edit-panel-border-color) !important;
