--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -82,7 +82,7 @@
 
 /* Dependency Graph */
 #dependency-graph-container,#error-msg-container {
-    margin-top: 30px;
+    margin-top: 20px;
     height: 100%; 
     width: 100%;
 }
@@ -119,14 +119,14 @@
 .label {
     text-anchor: end;
     fill: var(--graph-link);
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .link-label {
     text-anchor: middle;
     fill: var(--link-label);
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 /* Service Health  */
@@ -514,5 +514,9 @@ input.form-control {
     background-color: var(--ui-widget-bg-color) !important;
     padding: 5px;
     border-radius: 5px;
-    font-size: 15px;
+    font-size: 13px;
+}
+
+circle:hover{
+    cursor: pointer;
 }
