--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4852,3 +4852,7 @@ input.form-control {
 .live-tail-logs-container .ag-theme-mycustomtheme .ag-root-wrapper {
     border: 1px solid var(--border-btn-color);
 }
+
+#delbutton.default-dashboard-delete:hover {
+    background-image: url(../assets/dark-delete-icon-regular.svg);
+}
