--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -230,6 +230,14 @@
     background-color: var(--default-tab);
 }
 
+.scrollable-container {
+    overflow-y: scroll;
+    height: 500px;
+    margin-top: 20px;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(155, 155, 155, 0.7) transparent; 
+}
+
 .duration {
     display: flex;
     flex-direction: row;
