--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -233,7 +233,7 @@
 .scrollable-container {
     overflow-y: scroll;
     height: 500px;
-    margin-top: 20px;
+    margin: 20px 0;
     scrollbar-width: thin;
     scrollbar-color: rgba(155, 155, 155, 0.7) transparent; 
 }
